remove leverage, fix ui bugs

--- a/src/contexts/localization/languages/Jet_UI_IT.json
+++ b/src/contexts/localization/languages/Jet_UI_IT.json
@@ -49,7 +49,7 @@
     "noLiquidity": "Non hai abbastanza liquidità.",
     "minCRatio": "Questo metterà la tua posizione al nostro rapporto minimo di garanzia, ponendo quindi il tuo conto in un territorio di liquidazione. Sei sicuro?",
     "belowMinRatio": "Sei sottocollateralizzato. Deposita o rimborsa il tuo debito per evitare la liquidazione.",
-    "subjectToLiquidation": "This trade increases your leverage to {{NEW-LEVERAGE}}x, which puts you in range of liquidation.",
+    "subjectToLiquidation": "This trade increases your Risk Level to {{NEW-RISK}}, which puts you in range of liquidation.",
     "confirm": "Conferma",
     "repay": "Rimborsa",
     "amountOwed": "Importo dovuto",
@@ -57,16 +57,17 @@
     "geobanned": "Jet Protocol non è disponibile nella tua regione.",
     "noMarket": "Non siamo stati in grado di inizializzare il marketplace Jet.",
     "txSuccess": "Il tuo {{TRADE ACTION}} di {{AMOUNT AND ASSET}} è stato ricevuto.",
-    "txFailed": "Transazione fallita.",
+    "txFailed": "We were unable to complete your transaction at this time, please contact us or try again.",
     "max": "Massimo",
     "assetIsCurrentBorrow": "Hai preso in prestito {{ASSET}} e quindi non puoi depositarlo.",
     "belowMinCRatio": "Sei sottocollateralizzato. Deposita o rimborsa il tuo debito per evitare la liquidazione.",
+    "aboveMaxRiskLevel": "You are above the maximum Risk Level. Deposit or repay your debt to avoid liquidation.",
     "search": "Cerco il mercato...",
     "noBalanceForDeposit": "Non hai {{ASSET}} nel tuo wallet da depositare.",
     "noDepositsForBorrow": "È necessario depositare garanzie per prendere in prestito.",
     "noDepositsForWithdraw": "Non hai depositato nessun {{ASSET}} da ritirare.",
     "noDebtForRepay": "Non possiedi nessun {{ASSET}}.",
-    "rejectTrade": "This trade would increase your leverage to {{NEW_LEVERAGE}}x, which is too high. (Max for this pool is {{MAX_LEVERAGE}}x)",
+    "rejectTrade": "This trade would increase your Risk Level to {{NEW_RISK}}, which is too high. (Max is {{MAX_RISK}})",
     "insufficientLamports": "Stai depositando tutti i tuoi SOL lasciandoti senza fondi per le fee di transazione! Riprova con una quantità in input leggermente inferiore.",
     "stillUndercollateralized": "Il nuovo C-ratio di {{NEW-C-RATIO}}% è ancora sotto il rapporto minimo di garanzia del mercato di Jet di {{JET MIN C-RATIO}}%. Si prega di considerare di rimborsare di più per evitare la liquidazione.",
     "txCancelled": "Transazione cancellata.",
@@ -75,7 +76,8 @@
     "rentFeeDetail": "The rent fee for your transaction is {{RENT_FEE}} SOL. This amount will be returned to when you {{TRADE ACTION}} your full balance.",
     "maxRiskNote": "Note: Maximum Risk Level before partial liquidation is {{MAX_RISK}}",
     "totalSupply": "Fornitura Totale",
-    "txSuccessShort": "{{TRADE ACTION}} ricevuto."
+    "txSuccessShort": "{{TRADE ACTION}} ricevuto.",
+    "txFailedShort": "Transaction failed."
   },
   "settings": {
     "title": "Impostazioni",
