--- a/src/contexts/localization/languages/Jet_UI_RU.json
+++ b/src/contexts/localization/languages/Jet_UI_RU.json
@@ -49,7 +49,7 @@
     "noLiquidity": "Недостаточно ликвидности.",
     "minCRatio": "Это действие приведёт к тому, что ваша позиция достигнет минимума коэффициента обеспечения, и ваш счёт может быть подвергнут ликвидации. Вы уверены?",
     "belowMinRatio": "У вас недостаточно средств в залоге. Пополните залог или верните долг чтобы избежать ликвидации.",
-    "subjectToLiquidation": "This trade increases your leverage to {{NEW-LEVERAGE}}x, which puts you in range of liquidation.",
+    "subjectToLiquidation": "This trade increases your Risk Level to {{NEW-RISK}}, which puts you in range of liquidation.",
     "confirm": "Подтвердить",
     "repay": "Вернуть",
     "amountOwed": "Сумма долга",
@@ -57,16 +57,17 @@
     "geobanned": "Jet протокол не доступен в вашем регионе.",
     "noMarket": "площадка Jet не смогла запуститься.",
     "txSuccess": "Успех! Ваш(а) {{TRADE ACTION}} на {{AMOUNT AND ASSET}} получен(а).",
-    "txFailed": "Транзакция не прошла. Мы не уверены, что пошло не так. Попробуйте еще раз позже или свяжитесь с нами.",
+    "txFailed": "We were unable to complete your transaction at this time, please contact us or try again.",
     "max": "Максимум",
     "assetIsCurrentBorrow": "Вы одолжили {{ASSET}}, поэтому не можете его внести на депозит",
     "belowMinCRatio": "У вас недостаточно средств в залоге. Пополните залог или верните долг чтобы избежать ликвидации.",
+    "aboveMaxRiskLevel": "You are above the maximum Risk Level. Deposit or repay your debt to avoid liquidation.",
     "search": "Поиск валюты",
     "noBalanceForDeposit": "У Вас нету {{ASSET}} в кошельке, чтобы внести на депозит",
     "noDepositsForBorrow": "Вы должны предоставить залог, чтобы вы могли занять.",
     "noDepositsForWithdraw": "Вы не внесли на депозит {{ASSET}} чтобы вывести",
     "noDebtForRepay": "Вы не дожны {{ASSET}}.",
-    "rejectTrade": "This trade would increase your leverage to {{NEW_LEVERAGE}}x, which is too high. (Max for this pool is {{MAX_LEVERAGE}}x)",
+    "rejectTrade": "This trade would increase your Risk Level to {{NEW_RISK}}, which is too high. (Max is {{MAX_RISK}})",
     "stillUndercollateralized": "Ваш новый К-рейтинг {{NEW-C-RATIO}}% ниже минимального уровня на Jet's протоколе-  {{JET MIN C-RATIO}}%. Пожалуйста, оплатите больше, чтобы избежать ликвидации.",
     "txCancelled": "Transaction cancelled.",
     "welcomeAboard": "Welcome Aboard",
@@ -74,7 +75,8 @@
     "rentFeeDetail": "The rent fee for your transaction is {{RENT_FEE}} SOL. This amount will be returned to when you {{TRADE ACTION}} your full balance.",
     "maxRiskNote": "Note: Maximum Risk Level before partial liquidation is {{MAX_RISK}}",
     "totalSupply": "Total Supply",
-    "txSuccessShort": "{{TRADE ACTION}} received."
+    "txSuccessShort": "{{TRADE ACTION}} received.",
+    "txFailedShort": "Transaction failed."
   },
   "settings": {
     "title": "Настройки",
