--- a/src/contexts/localization/languages/Jet_UI_TR.json
+++ b/src/contexts/localization/languages/Jet_UI_TR.json
@@ -49,7 +49,7 @@
     "noLiquidity": "Yeterli likidite yok.",
     "minCRatio": "Bu işlem, pozisyonunuzu minimum teminat oranına alacaktır. Dolayısıyla hesabınız, likidasyon bölgesine girecektir. Bu işlemi yapmayı istediğinize emin misiniz?",
     "belowMinRatio": "Yeterli teminata sahip değilsiniz. Likidasyondan kaçınmak için para yatırın veya borcunuzu geri ödeyin.",
-    "subjectToLiquidation": "This trade increases your leverage to {{NEW-LEVERAGE}}x, which puts you in range of liquidation.",
+    "subjectToLiquidation": "This trade increases your Risk Level to {{NEW-RISK}}, which puts you in range of liquidation.",
     "confirm": "Onayla",
     "repay": "Geri öde",
     "amountOwed": "Borçlu Tutar",
@@ -57,15 +57,17 @@
     "geobanned": "Jet Protocol bölgenizde kullanılamıyor.",
     "noMarket": "Jet pazaryerini başlatamadık.",
     "txSuccess": "Başarılı! {{AMOUNT AND ASSET}} tutarındaki  {{TRADE ACTION}} alındı.",
+    "txFailed": "We were unable to complete your transaction at this time, please contact us or try again.",
     "max": "Maksimum",
     "assetIsCurrentBorrow": "{{ASSET}} ödünç aldınız ve bu nedenle yatıramazsınız.",
     "belowMinCRatio": "Teminatınız yetersiz. Likidasyondan kaçınmak için para yatırın veya borcunuzu geri ödeyin.",
+    "aboveMaxRiskLevel": "You are above the maximum Risk Level. Deposit or repay your debt to avoid liquidation.",
     "search": "Pazar arama..",
     "noBalanceForDeposit": "Yatırmak istediğiniz {{ASSET}} varlığı cüzdanınızda bulunmuyor. ",
     "noDepositsForBorrow": "Ödünç almak için teminat yatırmanız gerekiyor.",
     "noDepositsForWithdraw": "Çekme istediğiniz herhangi bir {{ASSET}} yatırımınız yok. ",
     "noDebtForRepay": "Hiç {{ASSET}} borcunuz yok.",
-    "rejectTrade": "This trade would increase your leverage to {{NEW_LEVERAGE}}x, which is too high. (Max for this pool is {{MAX_LEVERAGE}}x)",
+    "rejectTrade": "This trade would increase your Risk Level to {{NEW_RISK}}, which is too high. (Max is {{MAX_RISK}})",
     "insufficientLamports": "İşlem ücretlerini dahi karşılamayacak kadar çok SOL yatırıyorsunuz. Şu ankinden daha az bir miktar kullanarak yeniden deneyin. ",
     "stillUndercollateralized": "Yeni C-oranınız {{NEW-C-RATIO}}% hala Jet Protocol'ün minimum piyasa teminat oranı",
     "txCancelled": "Transaction cancelled.",
@@ -74,7 +76,8 @@
     "rentFeeDetail": "The rent fee for your transaction is {{RENT_FEE}} SOL. This amount will be returned to when you {{TRADE ACTION}} your full balance.",
     "maxRiskNote": "Note: Maximum Risk Level before partial liquidation is {{MAX_RISK}}",
     "totalSupply": "Total Supply",
-    "txSuccessShort": "{{TRADE ACTION}} received."
+    "txSuccessShort": "{{TRADE ACTION}} received.",
+    "txFailedShort": "Transaction failed."
   },
   "settings": {
     "title": "Ayarlar",
