--- a/src/contexts/localization/languages/Jet_UI_RU.json
+++ b/src/contexts/localization/languages/Jet_UI_RU.json
@@ -35,7 +35,7 @@
     "collateralizationRatio": "Коэффициент обеспечения",
     "noInputAmount": "Введите сумму.",
     "accountLeverage": "Account Leverage",
-    "adjustedRiskLevel": "Adjusted Risk Level",
+    "predictedRiskLevel": "Predicted Risk Level",
     "deposit": "Пополнить",
     "walletBalance": "Баланс кошелька",
     "noDepositAmount": "Введите сумму",
