JV15-202 Max deposit instead of wallet balance

--- a/src/contexts/localization/languages/Jet_UI_EN.json
+++ b/src/contexts/localization/languages/Jet_UI_EN.json
@@ -37,6 +37,7 @@
     "accountLeverage": "Account Leverage",
     "predictedRiskLevel": "Predicted Risk Level",
     "deposit": "Deposit",
+    "maxDeposit": "Max Deposit",
     "walletBalance": "Wallet Balance",
     "noDepositAmount": "Enter amount",
     "notEnoughAsset": "Not enough {{ASSET}}.",
