--- a/src/contexts/localization/languages/Jet_UI_TR.json
+++ b/src/contexts/localization/languages/Jet_UI_TR.json
@@ -37,6 +37,7 @@
     "accountLeverage": "Account Leverage",
     "predictedRiskLevel": "Predicted Risk Level",
     "deposit": "Yatırma",
+    "maxDeposit": "Max Deposit",
     "walletBalance": "Cüzdan Bakiyesi",
     "noDepositAmount": "Miktar girin",
     "notEnoughAsset": "Yeterli {{ASSET}} yok.",
