--- a/src/contexts/localization/languages/Jet_UI_DE.json
+++ b/src/contexts/localization/languages/Jet_UI_DE.json
@@ -37,6 +37,7 @@
     "accountLeverage": "Account Leverage",
     "predictedRiskLevel": "Predicted Risk Level",
     "deposit": "Einzahlen",
+    "maxDeposit": "Max Deposit",
     "walletBalance": "Wallet-Guthaben",
     "noDepositAmount": "Betrag eingeben.",
     "notEnoughAsset": "Nicht genügend {{ASSET}}.",
