--- a/src/contexts/localization/languages/Jet_UI_IT.json
+++ b/src/contexts/localization/languages/Jet_UI_IT.json
@@ -37,6 +37,7 @@
     "accountLeverage": "Account Leverage",
     "predictedRiskLevel": "Predicted Risk Level",
     "deposit": "Deposito",
+    "maxDeposit": "Max Deposit",
     "walletBalance": "Bilancio Wallet",
     "noDepositAmount": "Inserisci quantità",
     "notEnoughAsset": "Non hai abbastanza {{ASSET}}.",
