--- a/src/contexts/localization/languages/Jet_UI_KR.json
+++ b/src/contexts/localization/languages/Jet_UI_KR.json
@@ -37,6 +37,7 @@
     "accountLeverage": "Account Leverage",
     "predictedRiskLevel": "Predicted Risk Level",
     "deposit": "예치",
+    "maxDeposit": "Max Deposit",
     "walletBalance": "지갑 잔액",
     "noDepositAmount": "금액 입력",
     "notEnoughAsset": "충분하지 않은 {{ASSET}}.",
