--- a/src/contexts/localization/languages/Jet_UI_SP.json
+++ b/src/contexts/localization/languages/Jet_UI_SP.json
@@ -37,6 +37,7 @@
     "accountLeverage": "Account Leverage",
     "predictedRiskLevel": "Predicted Risk Level",
     "deposit": "Depositar",
+    "maxDeposit": "Max Deposit",
     "walletBalance": "Balance",
     "noDepositAmount": "Ingresar Monto",
     "notEnoughAsset": "{{ASSET}} insuficiente.",
