--- a/src/contexts/localization/languages/Jet_UI_KR.json
+++ b/src/contexts/localization/languages/Jet_UI_KR.json
@@ -38,6 +38,7 @@
     "predictedRiskLevel": "Predicted Risk Level",
     "deposit": "예치",
     "maxDeposit": "Max Deposit",
+    "minSol": "We reserve 0.07 SOL in the wallet for transaction fees.",
     "walletBalance": "지갑 잔액",
     "noDepositAmount": "금액 입력",
     "notEnoughAsset": "충분하지 않은 {{ASSET}}.",
