--- a/src/contexts/localization/languages/Jet_UI_SP.json
+++ b/src/contexts/localization/languages/Jet_UI_SP.json
@@ -38,6 +38,7 @@
     "predictedRiskLevel": "Predicted Risk Level",
     "deposit": "Depositar",
     "maxDeposit": "Max Deposit",
+    "minSol": "We reserve 0.07 SOL in the wallet for transaction fees.",
     "walletBalance": "Balance",
     "noDepositAmount": "Ingresar Monto",
     "notEnoughAsset": "{{ASSET}} insuficiente.",
