--- a/src/contexts/localization/languages/Jet_UI_TR.json
+++ b/src/contexts/localization/languages/Jet_UI_TR.json
@@ -38,6 +38,7 @@
     "predictedRiskLevel": "Predicted Risk Level",
     "deposit": "Yatırma",
     "maxDeposit": "Max Deposit",
+    "minSol": "We reserve 0.07 SOL in the wallet for transaction fees.",
     "walletBalance": "Cüzdan Bakiyesi",
     "noDepositAmount": "Miktar girin",
     "notEnoughAsset": "Yeterli {{ASSET}} yok.",
